--- a/1_3_expressions_and_operation.ipynb
+++ b/1_3_expressions_and_operation.ipynb
@@ -1037,7 +1037,7 @@
         "colab_type": "text"
       },
       "source": [
-        "1. Evaluate by hand: the only numbers that return 'Yes' are 5, 7 and 9, because they are odd numbers and fit the expression (5 <= x < 10)"
+        "1. Evaluate by hand: the only numbers that return 'Yes' would 5, 7 and 9, because they are odd numbers( x % 2 == 1 checks for x being odd) and fit the expression (5 <= x < 10)."
       ]
     },
     {
