--- a/1_3_expressions_and_operation.ipynb
+++ b/1_3_expressions_and_operation.ipynb
@@ -403,7 +403,7 @@
       "source": [
         "(8 + 57 ) % 12"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,16 +503,46 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 34
         },
-        "outputId": "85e9fb99-9b46-46a4-dd85-be147f9b8d22"
+        "outputId": "d855393d-5fff-4fec-a2f1-4ae8ce6f1f4f"
       },
       "source": [
         "a = \"hello\"\n",
         "b = \" world\" \n",
-        "a % b\n"
+        "a + b\n"
       ],
-      "execution_count": 26,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yr5WCzf6_i7g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        },
+        "outputId": "cc41a90f-277a-43d1-c8de-a9f860539193"
+      },
+      "source": [
+        "a-b"
+      ],
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "error",
@@ -521,8 +551,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-261c8aea1d97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"hello\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\" world\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+            "\u001b[0;32m<ipython-input-11-5ae0619f8fe1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
           ]
         }
       ]
@@ -564,12 +594,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 163
         },
-        "outputId": "009fa058-866e-484a-a1f4-3d946d149d4f"
+        "outputId": "278bab39-b839-4d7f-a43b-fad1a7e43335"
       },
       "source": [
-        "a % 2"
+        "a + 2"
       ],
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "error",
@@ -578,8 +608,37 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-1a711ff621d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+            "\u001b[0;32m<ipython-input-12-ead3c2111b4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-5HI-6GiABDO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        },
+        "outputId": "3c0ab35f-0a3b-49e4-f6b5-188af0bf8dbb"
+      },
+      "source": [
+        "2 % a"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-81eb8edcba2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m2\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for %: 'int' and 'str'"
           ]
         }
       ]
@@ -826,7 +885,7 @@
       "source": [
         "2 in [1, [2,3]]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1056,7 +1115,7 @@
         "x = 5\n",
         "\"Yes\" if (5 <= x < 10) and (x % 2 == 1) else \"No\""
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1089,7 +1148,7 @@
       "source": [
         "x % 7"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1120,7 +1179,7 @@
         "x = 7\n",
         "\"Yes\" if (5 <= x < 10) and (x % 2 == 1) else \"No\""
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1213,7 @@
         "x = 9.0\n",
         "\"Yes\" if (5 <= x < 10) and (x % 2 == 1) else \"No\""
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1247,7 @@
         "x = 9\n",
         "\"Yes\" if (5 <= x < 10) and (x % 2 == 1) else \"No\""
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
